# beangulp-simplefin

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SIMPLEFIN.md  beangulp_simplefin.py  flake.nix  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
tests/: test_beangulp_simplefin.py
