[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "beangulp-simplefin"
version = "0.1.0"
description = "Beangulp importer for SimpleFIN"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Rob Cohen", email = "rob@robcohen.io" }
]
requires-python = ">=3.9"
keywords = ["beancount", "beangulp", "simplefin", "accounting", "finance", "import"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
dependencies = [
    "beangulp",
    "beancount",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "coverage",
    "mypy",
    "pre-commit",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/robcohen/beangulp-simplefin"
Repository = "https://github.com/robcohen/beangulp-simplefin"
Issues = "https://github.com/robcohen/beangulp-simplefin/issues"

[tool.setuptools]
py-modules = ["beangulp_simplefin"]

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
